# invoice-lookup

./: Cargo.toml  check_history.mjs  check_history.py  check_history.sh  check_history_v2.mjs  history.csv  history_checked.csv
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/domain/: entity.rs  repository.rs
cli/src/infrastructure/: mod.rs  nta_repository.rs
cli/src/presentation/: commands.rs
cli/src/usecase/: check_history.rs  lookup.rs  mod.rs
scripts/: setup.sh
src/: lib.rs
