[package]
name = "invoice-lookup-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "CLI application for Japan NTA Invoice Registration lookup"

[[bin]]
name = "invoice-cli"
path = "src/main.rs"

[dependencies]
invoice-lookup = { path = ".." }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
